Vector3D doesn't inherit from vector anymore. Overhead increased by 90%!